external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_inferred_through_variable_valid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:13:16
   │
13 │         let x: i8 = 0;
   │                ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:13:21
   │
13 │         let x: i8 = 0;
   │                     ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:15:17
   │
15 │         let _z: i8 = 100;
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:15:22
   │
15 │         let _z: i8 = 100;
   │                      ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:19:22
   │
19 │     fun takes_i16(x: i16): i16 { x }
   │                      ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:19:28
   │
19 │     fun takes_i16(x: i16): i16 { x }
   │                            ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:21:27
   │
21 │         let x = takes_i16(5);
   │                           ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:26:24
   │
26 │     fun returns_i32(): i32 { 42 }
   │                        ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:26:30
   │
26 │     fun returns_i32(): i32 { 42 }
   │                              ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:34:16
   │
34 │         let x: i64 = 10;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:35:18
   │
35 │         let _y = x + 5;
   │                  ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:39:16
   │
39 │         let x: i64 = 10;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:40:18
   │
40 │         let _y = 5 + x;
   │                  ^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:45:16
   │
45 │         let x: i32 = 10;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:51:16
   │
51 │         let a: i128 = 99;
   │                ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_inferred_through_variable_valid.move:51:23
   │
51 │         let a: i128 = 99;
   │                       ^^ Signed integer types are under development
